--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
+  "types": "./index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "preversion": "npm run build",
