--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preversion": "npm run test && npm run build",
     "version": "npm publish --access public",
     "postversion": "git push --follow-tags",
-    "test": "node test/mount.test.js"
+    "test": "NODE_ENV=production node test/mount.test.js"
   },
   "repository": {
     "type": "git",
@@ -30,10 +30,10 @@
   },
   "homepage": "https://github.com/pearofducks/mount-vue-component#readme",
   "devDependencies": {
-    "abdomen": "^1.0.0",
-    "jsdom": "^19.0.0",
-    "rollup": "^2.51.1",
+    "@happy-dom/global-registrator": "^5.3.1",
+    "happy-dom": "^5.3.1",
+    "rollup": "^2.75.6",
     "uvu": "^0.5.1",
-    "vue": "^3.1.1"
+    "vue": "^3.2.37"
   }
 }
