--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,13 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Get node
-      uses: actions/setup-node@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
       with:
-        node-version: 14.x
-    - name: install, build, test
+        node-version: current
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 7
+        run_install: true
+    - name: test and build
       run: |
-        yarn
-        npm run build --if-present
-        npm test
+        pnpm test
+        pnpm build
